--- a/.github/workflows/tf-apply.yml
+++ b/.github/workflows/tf-apply.yml
@@ -92,6 +92,14 @@ jobs:
         run: |
           pip3 install terraform-compliance
 
+      - name: Install PowerShell modules
+        id: install-powershell-modules
+        shell: pwsh
+        run: |
+          pwsh -Command Set-PSRepository -Name "PSGallery" -InstallationPolicy Trusted ; `
+          pwsh -Command Install-Module -Name Az.Accounts -Force -AllowClobber -Scope AllUsers -Repository PSGallery ; `
+          pwsh -Command Install-Module -Name Az.Storage -Force -AllowClobber -Scope AllUsers -Repository PSGallery 
+
       - name: Build
         id: run-script
         shell: pwsh
