--- a/.github/workflows/tf-apply.yml
+++ b/.github/workflows/tf-apply.yml
@@ -97,8 +97,8 @@ jobs:
         shell: pwsh
         run: |
           pwsh -Command Set-PSRepository -Name "PSGallery" -InstallationPolicy Trusted ; `
-          pwsh -Command Install-Module -Name Az.Accounts -Force -AllowClobber -Scope AllUsers -Repository PSGallery ; `
-          pwsh -Command Install-Module -Name Az.Storage -Force -AllowClobber -Scope AllUsers -Repository PSGallery 
+          pwsh -Command Install-Module -Name Az.Accounts -Force -AllowClobber -Scope CurrentUser -Repository PSGallery ; `
+          pwsh -Command Install-Module -Name Az.Storage -Force -AllowClobber -Scope CurrentUser -Repository PSGallery 
 
       - name: Build
         id: run-script
