--- a/.github/workflows/tf-plan-destroy.yml
+++ b/.github/workflows/tf-plan-destroy.yml
@@ -1,4 +1,4 @@
-name: Terraform Destroy
+name: Terraform Plan Destroy
 
 on:
   workflow_dispatch:
@@ -23,8 +23,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Libre DevOps - Run Terraform Destroy for Azure
-        uses: libre-devops/terraform-destroy-azure@v1
+      - name: Libre DevOps - Run Terraform Plan -destroy for Azure
+        uses: libre-devops/terraform-plan-destroy-azure@v1
         with:
           terraform-workspace: ${{ github.event.inputs.terraform-workspace }}
           terraform-init-extra-args-json: ${{ env.terraform-init-extra-args-json }}
