--- a/.azuredevops/workflows/terraform-destroy.yaml
+++ b/.azuredevops/workflows/terraform-destroy.yaml
@@ -21,7 +21,7 @@ parameters:
 
   - name: TerraformStackToRunJson
     type: string
-    default: '["rg"]'
+    default: '["module-development"]'
     values:
       - '["rg"]'
       - '["network"]'
